k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: banking-app
  labels:
    tier: secure-zone
